modified my earlier code

--- a/target.html
+++ b/target.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Quiz</title>
 </head>
 <body>
-    <h1>Hello World</h1>
+        <input type="radio" id="html" name="option1" value="0" onclick="select(value)">
+        <label for="html">HTML</label><br>
+        <input type="radio" id="css" name="option2" value="1" onclick="select(value)">
+        <label for="css">CSS</label><br>
+        <input type="radio" id="js" name="option3" value="2" onclick="select(value)">
+        <label for="js">JS</label><br>
+        <input type="radio" id="django" name="option4" value="3" onclick="select(value)">
+        <label for="django">DJANGO</label><br>
+        <input type="button" id="submit" name="submit" value="submit" onclick="submit()">
+        <script src="reuse1.js"></Script>
 </body>
 </html>
